# PatternCreator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Geometry/: EntityShape2D.cpp  EntityShape2D.hpp  Shape2D.cpp  Shape2D.hpp  Vertex2D.cpp  Vertex2D.hpp
GraphicalDebug/: GShape2D.cpp  GShape2D.hpp
Parser/: Parser.cpp  Parser.hpp
